--- a/lxd-dashboard/settings.html
+++ b/lxd-dashboard/settings.html
@@ -246,46 +246,61 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
           <div class="row">
             <label class="col-3 col-form-label text-right">Username: </label>
-            <div class="col-8">
+            <div class="col-7">
               <div class="form-group">
                 <input type="text" id="usernameInput" class="form-control" required="required" placeholder="" name="usernameInput">
               </div>
+            </div>
+            <div class="col-1">
+              <i class="far fa-sm fa-question-circle text-danger" title='(Required) - Enter in a username for the user.'></i>
             </div>
           </div>
 
           <div class="row">
             <label class="col-3 col-form-label text-right">Password: </label>
-            <div class="col-8">
+            <div class="col-7">
               <div class="form-group">
                 <input type="password" id="passwordInput" class="form-control" required="required" placeholder="" name="passwordInput">
               </div>
+            </div>
+            <div class="col-1">
+              <i class="far fa-sm fa-question-circle text-danger" title='(Required) - Enter in a password for the user.'></i>
             </div>
           </div>
 
           <div class="row">
             <label class="col-3 col-form-label text-right">First Name: </label>
-            <div class="col-8">
+            <div class="col-7">
               <div class="form-group">
                 <input type="text" id="firstNameInput" class="form-control" placeholder="" name="firstNameInput">
               </div>
+            </div>
+            <div class="col-1">
+              <i class="far fa-sm fa-question-circle" title='Enter in the firstname of the user.'></i>
             </div>
           </div>
 
           <div class="row">
             <label class="col-3 col-form-label text-right">Last Name: </label>
-            <div class="col-8">
+            <div class="col-7">
               <div class="form-group">
                 <input type="text" id="lastNameInput" class="form-control" placeholder="" name="lastNameInput">
               </div>
+            </div>
+            <div class="col-1">
+              <i class="far fa-sm fa-question-circle" title='Enter in the lastname of the user.'></i>
             </div>
           </div>
 
           <div class="row">
             <label class="col-3 col-form-label text-right">Email: </label>
-            <div class="col-8">
+            <div class="col-7">
               <div class="form-group">
                 <input type="text" id="emailInput" class="form-control" required="required" placeholder="" name="emailInput">
               </div>
+            </div>
+            <div class="col-1">
+              <i class="far fa-sm fa-question-circle" title='Enter in the email address of the user.'></i>
             </div>
           </div>
 
@@ -312,11 +327,14 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
           <div class="row">
             <label class="col-3 col-form-label text-right">Group:</label>
-            <div class="col-8 text-right">
+            <div class="col-7 text-right">
               <div class="form-group">
                 <select id="groupIdForAddGroupInput" class="form-control" name="groupIdForAddGroupInput">
                 </select>
               </div>
+            </div>
+            <div class="col-1">
+              <i class="far fa-sm fa-question-circle" title='Select the group to add.'></i>
             </div>
           </div>
 
@@ -345,11 +363,14 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
           <div class="row">
             <label class="col-3 col-form-label text-right">Group:</label>
-            <div class="col-8 text-right">
+            <div class="col-7 text-right">
               <div class="form-group">
                 <select id="groupIdForRemoveGroupInput" class="form-control" name="groupIdForRemoveGroupInput">
                 </select>
               </div>
+            </div>
+            <div class="col-1">
+              <i class="far fa-sm fa-question-circle" title='Select the group to remove.'></i>
             </div>
           </div>
 
@@ -398,19 +419,25 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
           <div class="row">
             <label class="col-3 col-form-label text-right">Name: </label>
-            <div class="col-8">
+            <div class="col-7">
               <div class="form-group">
                 <input type="text" id="nameInput" class="form-control" required="required" placeholder="" name="nameInput">
               </div>
+            </div>
+            <div class="col-1">
+              <i class="far fa-sm fa-question-circle text-danger" title='(Required) - Enter in a name for the group.'></i>
             </div>
           </div>
 
           <div class="row">
             <label class="col-3 col-form-label text-right">Description </label>
-            <div class="col-8">
+            <div class="col-7">
               <div class="form-group">
                 <input type="text" id="descriptionInput" class="form-control" required="required" placeholder="" name="descriptionInput">
               </div>
+            </div>
+            <div class="col-1">
+              <i class="far fa-sm fa-question-circle" title='Enter in a description for the group.'></i>
             </div>
           </div>
 
@@ -437,11 +464,14 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
           <div class="row">
             <label class="col-3 col-form-label text-right">Role:</label>
-            <div class="col-8 text-right">
+            <div class="col-7 text-right">
               <div class="form-group">
                 <select id="roleIdForAddRoleInput" class="form-control" name="roleIdForAddRoleInput">
                 </select>
               </div>
+            </div>
+            <div class="col-1">
+              <i class="far fa-sm fa-question-circle" title='Select the role to add.'></i>
             </div>
           </div>
 
@@ -470,11 +500,14 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
           <div class="row">
             <label class="col-3 col-form-label text-right">Role:</label>
-            <div class="col-8 text-right">
+            <div class="col-7 text-right">
               <div class="form-group">
                 <select id="roleIdForRemoveRoleInput" class="form-control" name="roleIdForRemoveRoleInput">
                 </select>
               </div>
+            </div>
+            <div class="col-1">
+              <i class="far fa-sm fa-question-circle" title='Select the role to remove.'></i>
             </div>
           </div>
 
