--- a/lxd-dashboard/sidebar.html
+++ b/lxd-dashboard/sidebar.html
@@ -185,7 +185,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     $('#projectsIcon').css('color','#fff');
   }
 
-  if (location.pathname == "/network-acls.html"){
+  if (location.pathname == "/network-acls.html" || location.pathname == "/network-acls-egress.html" || location.pathname == "/network-acls-ingress.html"){
     $('#networkAclsSpan').css('color','#fff');
     $('#networkAclsIcon').css('color','#fff');
   }
