--- a/lxd-dashboard/images.html
+++ b/lxd-dashboard/images.html
@@ -229,7 +229,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
                 </div>
               </div>
               <div class="col-1">
-                <i class="far fa-sm fa-question-circle" data-toggle="tooltip" data-html="true" title='Repository specific name. For example, ubuntu/20.04 and 20.04 would be used for the images and ubuntu repositories respectively'></i>
+                <i class="far fa-sm fa-question-circle text-danger" data-toggle="tooltip" data-html="true" title='(Required) - Enter in the repository specific name. For example, ubuntu/20.04 would be used for the images repository and simply 20.04 would be used for the ubuntu repositories.'></i>
               </div>
 
               <label class="col-3 col-form-label text-right">Repository:</label>
@@ -238,6 +238,9 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
                   <select id="selectRepoInput" class="form-control" name="repo">
                   </select>
                 </div>
+              </div>
+              <div class="col-1">
+                <i class="far fa-sm fa-question-circle" title='Select a repository from the configured simplestreams.'></i>
               </div>
 
               <label class="col-3 col-form-label text-right">Image Type:</label>
@@ -248,6 +251,9 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
                     <option value="virtual-machine">virtual-machine</option>
                   </select>
                 </div>
+              </div>
+              <div class="col-1">
+                <i class="far fa-sm fa-question-circle" title='Select whether to download a container based image or virtual machine. Default: container'></i>
               </div>
             </div>
 
