--- a/lxd-dashboard/projects.html
+++ b/lxd-dashboard/projects.html
@@ -220,11 +220,14 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
           </div>
           <div class="modal-body">
             <div class="row">
-              <label class="col-2 col-form-label text-right">Name: </label>
-              <div class="col-9">
+              <label class="col-3 col-form-label text-right">Name: </label>
+              <div class="col-7">
                 <div class="form-group text-right">
-                  <input type="text" class="form-control" id="projectNameInput" required="required" placeholder="Project Name" name="name">
+                  <input type="text" class="form-control" id="projectNameInput" required="required" placeholder="" name="name">
                 </div>
+              </div>
+              <div class="col-1">
+                <i class="far fa-sm fa-question-circle text-danger" title='(Required) - Enter in a name for the project.'></i>
               </div>
             </div>
           </div>
@@ -283,6 +286,9 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
                 <div class="form-group">
                   <input type="text" id="newProjectName" class="form-control" placeholder="">
                 </div>
+              </div>
+              <div class="col-1">
+                <i class="far fa-sm fa-question-circle text-danger" title='Enter in a new name for the project.'></i>
               </div>
             </div>
             <input type="hidden" id ="projectToRename" name="projectToRename">
